--- a/components/design-system/package.json
+++ b/components/design-system/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/design-system",
-  "version": "1.2.3",
+  "version": "1.2.4-alpha.0",
   "description": "Your source for quickly creating consistent on-brand NICE digital services",
   "author": "Ian Routledge <ian.routledge@nice.org.uk>",
   "homepage": "https://design-system.nice.org.uk/",
@@ -48,7 +48,7 @@
     "@nice-digital/nds-grid": "^1.2.1",
     "@nice-digital/nds-hero": "^1.2.1",
     "@nice-digital/nds-horizontal-nav": "^1.1.0",
-    "@nice-digital/nds-in-page-nav": "^1.2.1",
+    "@nice-digital/nds-in-page-nav": "^1.2.2-alpha.0",
     "@nice-digital/nds-input": "^1.2.1",
     "@nice-digital/nds-maintain-ratio": "^1.2.1",
     "@nice-digital/nds-page-header": "^1.2.1",
