--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -2,13 +2,13 @@
 	"name": "@nice-digital/design-system-documentation",
 	"private": true,
 	"description": "Documentation for the NICE Design System",
-	"version": "1.2.3",
+	"version": "1.2.4-alpha.0",
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"keywords": [
 		"gatsby"
 	],
 	"dependencies": {
-		"@nice-digital/design-system": "^1.2.3",
+		"@nice-digital/design-system": "^1.2.4-alpha.0",
 		"@nice-digital/nds-action-banner": "^1.2.1",
 		"@nice-digital/nds-alert": "^1.2.0",
 		"@nice-digital/nds-breadcrumbs": "^1.2.1",
@@ -24,7 +24,7 @@
 		"@nice-digital/nds-grid": "^1.2.1",
 		"@nice-digital/nds-hero": "^1.2.1",
 		"@nice-digital/nds-horizontal-nav": "^1.1.0",
-		"@nice-digital/nds-in-page-nav": "^1.2.1",
+		"@nice-digital/nds-in-page-nav": "^1.2.2-alpha.0",
 		"@nice-digital/nds-input": "^1.2.1",
 		"@nice-digital/nds-maintain-ratio": "^1.2.1",
 		"@nice-digital/nds-page-header": "^1.2.1",
