--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook",
-  "version": "1.2.3",
+  "version": "1.2.4-alpha.0",
   "private": true,
   "description": "> TODO: description",
   "author": "Warren Keith <warren.keith@nice.org.uk>",
@@ -19,7 +19,7 @@
     "url": "git+https://github.com/nice-digital/nice-design-system.git"
   },
   "dependencies": {
-    "@nice-digital/design-system": "^1.2.3",
+    "@nice-digital/design-system": "^1.2.4-alpha.0",
     "@nice-digital/nds-action-banner": "^1.2.1",
     "@nice-digital/nds-alert": "^1.2.0",
     "@nice-digital/nds-breadcrumbs": "^1.2.1",
@@ -35,7 +35,7 @@
     "@nice-digital/nds-grid": "^1.2.1",
     "@nice-digital/nds-hero": "^1.2.1",
     "@nice-digital/nds-horizontal-nav": "^1.1.0",
-    "@nice-digital/nds-in-page-nav": "^1.2.1",
+    "@nice-digital/nds-in-page-nav": "^1.2.2-alpha.0",
     "@nice-digital/nds-input": "^1.2.1",
     "@nice-digital/nds-maintain-ratio": "^1.2.1",
     "@nice-digital/nds-page-header": "^1.2.1",
