--- a/components/nds-tabs/package.json
+++ b/components/nds-tabs/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-tabs",
-	"version": "1.2.3",
+	"version": "1.2.4-alpha.0",
 	"description": "Tabs component for the NICE Design System",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
@@ -31,7 +31,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^1.2.3",
+		"@nice-digital/nds-core": "^1.2.4-alpha.0",
 		"prop-types": "^15.7.2"
 	},
 	"peerDependencies": {
