--- a/components/nds-input/package.json
+++ b/components/nds-input/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/nds-input",
-  "version": "1.2.4-alpha.0",
+  "version": "1.2.4",
   "description": "Input component for the NICE Design System",
   "author": "Warren Keith <warren.keith@nice.org.uk>",
   "homepage": "https://nice-digital.github.io/nice-design-system/",
@@ -34,7 +34,7 @@
     "url": "https://github.com/nice-digital/nice-design-system/issues"
   },
   "dependencies": {
-    "@nice-digital/nds-core": "^1.2.4-alpha.0",
+    "@nice-digital/nds-core": "^1.2.4",
     "classnames": "^2.2.6",
     "prop-types": "^15.7.2"
   },
