--- a/components/nds-phase-banner/package.json
+++ b/components/nds-phase-banner/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/nds-phase-banner",
-  "version": "1.2.4-alpha.0",
+  "version": "1.2.4",
   "description": "Phase banner component for the NICE Design System",
   "keywords": [
     "alpha",
@@ -38,8 +38,8 @@
     "url": "https://github.com/nice-digital/nice-design-system/issues"
   },
   "dependencies": {
-    "@nice-digital/nds-core": "^1.2.4-alpha.0",
-    "@nice-digital/nds-tag": "^1.2.3-alpha.0",
+    "@nice-digital/nds-core": "^1.2.4",
+    "@nice-digital/nds-tag": "^1.2.3",
     "prop-types": "^15.7.2"
   },
   "devDependencies": {
