--- a/components/nds-tag/package.json
+++ b/components/nds-tag/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-tag",
-	"version": "1.2.3-alpha.0",
+	"version": "1.2.3",
 	"description": "Tag component for the NICE Design System",
 	"keywords": [
 		"tag"
@@ -34,7 +34,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^1.2.4-alpha.0",
+		"@nice-digital/nds-core": "^1.2.4",
 		"classnames": "^2.2.6",
 		"prop-types": "^15.7.2"
 	},
