--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -27,6 +27,7 @@
     "@nice-digital/nds-callout": "^1.1.4",
     "@nice-digital/nds-card": "^1.2.4",
     "@nice-digital/nds-checkbox": "^1.2.4",
+    "@nice-digital/nds-container": "^1.0.0",
     "@nice-digital/nds-core": "^1.2.4",
     "@nice-digital/nds-filters": "^1.2.4",
     "@nice-digital/nds-form-group": "^1.2.4",
