--- a/components/design-system/package.json
+++ b/components/design-system/package.json
@@ -64,7 +64,8 @@
     "@nice-digital/nds-tag": "^1.2.4",
     "@nice-digital/nds-textarea": "^1.2.5",
     "normalize.css": "8.0.1",
-    "react": "^16.11.0"
+    "react": "^16.11.0",
+    "sass-mq": "^5.0.1"
   },
   "gitHead": "a4db68f43916ad6c4cb19612e10aae200e80b5a8"
 }
