--- a/components/nds-action-banner/package.json
+++ b/components/nds-action-banner/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-action-banner",
-	"version": "1.2.6-alpha.0",
+	"version": "1.2.7-alpha.0",
 	"description": "Action banner component for the NICE Design System",
 	"keywords": [
 		"banner"
@@ -35,7 +35,7 @@
 	},
 	"dependencies": {
 		"@nice-digital/icons": "^2.2.3",
-		"@nice-digital/nds-core": "^1.2.5",
+		"@nice-digital/nds-core": "^1.2.6-alpha.0",
 		"prop-types": "^15.7.2"
 	},
 	"peerDependencies": {
