--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -2,42 +2,42 @@
 	"name": "@nice-digital/design-system-documentation",
 	"private": true,
 	"description": "Documentation for the NICE Design System",
-	"version": "1.2.14-alpha.0",
+	"version": "1.2.15-alpha.0",
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"keywords": [
 		"gatsby"
 	],
 	"dependencies": {
-		"@nice-digital/design-system": "^1.2.14-alpha.0",
-		"@nice-digital/nds-action-banner": "^1.2.6-alpha.0",
-		"@nice-digital/nds-alert": "^1.2.5-alpha.0",
-		"@nice-digital/nds-breadcrumbs": "^1.2.6-alpha.0",
+		"@nice-digital/design-system": "^1.2.15-alpha.0",
+		"@nice-digital/nds-action-banner": "^1.2.7-alpha.0",
+		"@nice-digital/nds-alert": "^1.2.6-alpha.0",
+		"@nice-digital/nds-breadcrumbs": "^1.2.7-alpha.0",
 		"@nice-digital/nds-button": "^1.2.6-alpha.0",
-		"@nice-digital/nds-callout": "^1.1.6-alpha.0",
+		"@nice-digital/nds-callout": "^1.1.7-alpha.0",
 		"@nice-digital/nds-card": "^1.2.8-alpha.0",
 		"@nice-digital/nds-checkbox": "^1.2.6-alpha.0",
 		"@nice-digital/nds-container": "^1.0.2-alpha.0",
-		"@nice-digital/nds-core": "^1.2.5",
-		"@nice-digital/nds-filters": "^1.2.6-alpha.0",
+		"@nice-digital/nds-core": "^1.2.6-alpha.0",
+		"@nice-digital/nds-filters": "^1.2.7-alpha.0",
 		"@nice-digital/nds-form-group": "^1.2.6-alpha.0",
 		"@nice-digital/nds-forms": "^1.2.2",
 		"@nice-digital/nds-full-bleed": "^1.1.6-alpha.0",
-		"@nice-digital/nds-grid": "^1.2.6",
+		"@nice-digital/nds-grid": "^1.2.7-alpha.0",
 		"@nice-digital/nds-hero": "^1.2.6-alpha.0",
-		"@nice-digital/nds-horizontal-nav": "^1.1.5-alpha.0",
+		"@nice-digital/nds-horizontal-nav": "^1.1.6-alpha.0",
 		"@nice-digital/nds-in-page-nav": "^1.2.9-alpha.0",
 		"@nice-digital/nds-input": "^1.2.6-alpha.0",
 		"@nice-digital/nds-maintain-ratio": "^1.2.6-alpha.0",
 		"@nice-digital/nds-page-header": "^1.2.6-alpha.0",
-		"@nice-digital/nds-panel": "^1.2.7-alpha.0",
+		"@nice-digital/nds-panel": "^1.2.8-alpha.0",
 		"@nice-digital/nds-phase-banner": "^1.2.6-alpha.0",
-		"@nice-digital/nds-prev-next": "^1.1.6-alpha.0",
-		"@nice-digital/nds-radio": "^1.2.5-alpha.0",
+		"@nice-digital/nds-prev-next": "^1.1.7-alpha.0",
+		"@nice-digital/nds-radio": "^1.2.6-alpha.0",
 		"@nice-digital/nds-simple-pagination": "^1.2.6-alpha.0",
-		"@nice-digital/nds-stacked-nav": "^1.2.6-alpha.0",
+		"@nice-digital/nds-stacked-nav": "^1.2.7-alpha.0",
 		"@nice-digital/nds-table": "^1.1.8-alpha.0",
-		"@nice-digital/nds-tabs": "^1.2.7-alpha.0",
-		"@nice-digital/nds-tag": "^1.2.5-alpha.0",
+		"@nice-digital/nds-tabs": "^1.2.8-alpha.0",
+		"@nice-digital/nds-tag": "^1.2.6-alpha.0",
 		"@nice-digital/nds-textarea": "^1.2.6-alpha.0"
 	},
 	"devDependencies": {
