--- a/components/icons/package.json
+++ b/components/icons/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/icons",
-	"version": "2.2.3",
+	"version": "2.2.4-alpha.0",
 	"description": "Icons for use in NICE Digital Services",
 	"main": "index.js",
 	"scripts": {
